fix: user icon text overflow in some cases

--- a/public/less/generics.less
+++ b/public/less/generics.less
@@ -77,6 +77,7 @@
 	font-weight: normal;
 	vertical-align: middle;
 	overflow: hidden;	/* stops alt text from overflowing past boundaries if image does not load */
+	white-space: nowrap;
 
 	&:before {
 		content: '';
